tests/ui/option_required.stderr
error: proc-macro derive panicked
  --> $DIR/option_required.rs:13:10
   |
13 | #[derive(Clap, Debug)]
   |          ^^^^
   |
   = help: message: required is meaningless for Option
